--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,9 @@
 title: "Multiscale Biological Modeling: A Free Online Course"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A free and open online course in biological modeling at multiple scales.
 twitter_username: phillipcompeau
-github_username: username
+github_username: phcompeau
 minimal_mistakes_skin: contrast
 search: true
 
