Adding line breaks to wb cells ToC

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -173,13 +173,13 @@ coronavirus:
 white_blood_cells:
   - title: Software Tutorials (featuring CellOrganizer)
     children:
-      - title: "Segmenting nuclei from cellular images"
+      - title: "Segmenting nuclei from cellular images<br><br>"
         url: /white_blood_cells/tutorial_nuclear_segmentation
-      - title: "Binarizing Images"
+      - title: "Binarizing Images<br><br>"
         url: /white_blood_cells/tutorial_image_binarization
-      - title: "Applying principal components analysis to nuclear image boundaries"
+      - title: "Applying principal components analysis to nuclear image boundaries<br><br>"
         url: /white_blood_cells/tutorial_PCA
-      - title: "Generating and visualizing an image shape space"
+      - title: "Generating and visualizing an image shape space<br><br>"
         url: /white_blood_cells/tutorial_shape_space
-      - title: "Training a classifier on an image shape space"
+      - title: "Training a classifier on an image shape space<br><br>"
         url: /white_blood_cells/tutorial_image_classification
