--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -171,6 +171,10 @@ coronavirus:
         url: /coronavirus/tutorial_ANM
 
 white_blood_cells:
+  - title: "Training a Computer to Count White Blood Cells"
+    children:
+      - title: "Introduction<br><br>"
+        url: /white_blood_cells/home
   - title: Software Tutorials (featuring CellOrganizer)
     children:
       - title: "Segmenting nuclei from cellular images<br><br>"
