--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,7 @@ defaults:
       layout: single
       comments: true # adding comments
       share: true # add social sharing to pages
+      author_profile: true
 
 category_archive:
   type: liquid
