trying universal header

--- a/_config.yml
+++ b/_config.yml
@@ -42,8 +42,10 @@ author:
 search: true
 search_provider: algolia
 
-# Site logo (next to title)
-logo: "/assets/images/gray_scott_jupyter_3.png"
+# Site logo (next to title) -- doesn't seem to work
+# logo: "/assets/images/gray_scott_jupyter_3.png"
+header:
+  image: "assets/images/f38_k61.jpg"
 
 # Allow comments
 comments:
