--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ minimal_mistakes_skin: contrast
 author:
   name: "Phillip Compeau"
   avatar: "/assets/images/Phillip_Compeau.JPG"
-  bio: "Online education founder. Proud to have built Biological Modeling with my students." # Note: Markdown is allowed
+  bio: "Online education founder. Proud to have built *Biological Modeling* with my students." # Note: Markdown is allowed
   links:
     - label: "Personal website"
       icon: "fas fa-fw fa-link"
