--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -179,7 +179,7 @@ white_blood_cells:
         url: /white_blood_cells/segmentation
       - title: "An overview of classification<br><br>"
         url: /white_blood_cells/classification
-      - title: "Building shape spaces from images<br><br>"
+      - title: "Building a shape space from a collection of images<br><br>"
         url: /white_blood_cells/shape_space
   - title: Software Tutorials (featuring CellOrganizer)
     children:
