--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -181,6 +181,8 @@ white_blood_cells:
         url: /white_blood_cells/classification
       - title: "Building a shape space from a collection of images<br><br>"
         url: /white_blood_cells/shape_space
+      - title: "Reducing the dimension of a dataset with principal components analysis<br><br>"
+        url: /white_blood_cells/pca
   - title: Software Tutorials (featuring CellOrganizer)
     children:
       - title: "Segmenting nuclei from cellular images<br><br>"
