--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -103,7 +103,7 @@ chemotaxis:
         url: /chemotaxis/home_conclusion
   - title: Software Tutorials (featuring BioNetGen)
     children:
-      - title: "Getting started wtih BioNetGen and modeling ligand-receptor dynamics<br><br>"
+      - title: "Getting started with BioNetGen and modeling ligand-receptor dynamics<br><br>"
         url: /chemotaxis/tutorial_lr
       - title: "Adding phosphorylation to our BioNetGen model<br><br>"
         url: /chemotaxis/tutorial_phos
