trying italics for course title

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Biological Modeling: A Free Online Course"
+title: "<em>Biological Modeling:</em> A Free Online Course"
 url: "https://biologicalmodeling.org"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
