--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "<em>Biological Modeling:</em> A Free Online Course"
+title: "<em>Biological Modeling:</em>"
+subtitle: " A Free Online Course"
 url: "https://biologicalmodeling.org"
 email:
+locale: "en-US"
 description: >- # this means to ignore newlines until "baseurl:"
   A free and open online course in biological modeling at multiple scales.
 twitter_username: phillipcompeau
