--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,7 +23,7 @@ prologue:
     children:
       - title: "Introduction: Alan Turing and the zebra's stripes<br><br>"
         url: /prologue/
-      - title: "An introduction to random walks<br><br>"
+      - title: "An overview of random walks<br><br>"
         url: /prologue/random_walk
       - title: "A reaction-diffusion model generating Turing patterns<br><br>"
         url: /prologue/reaction-diffusion
