--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "<em>Biological Modeling</em>"
+title: "Biological Modeling"
 subtitle: "A Free Online Course"
 masthead_title: "<em>Biological Modeling</em>: A Free Online Course" # combine title and subtitle in masthead
 logo: "/assets/images/200px/gray_scott_jupyter_high-res.png"
