--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -135,7 +135,7 @@ coronavirus:
         url: /coronavirus/ab_initio
       - title: "Homology modeling<br><br>"
         url: /coronavirus/homology
-      - title: "Comparing protein structures to assess model accuracy<br><br>"
+      - title: "Protein structure comparison<br><br>"
         url: /coronavirus/accuracy
       - title: "Part 1 conclusion: protein structure prediction is solved! (Kinda…)<br><br>"
         url: /coronavirus/conclusion_part_1
