--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -137,7 +137,7 @@ coronavirus:
         url: /coronavirus/homology
       - title: "Protein structure comparison<br><br>"
         url: /coronavirus/accuracy
-      - title: "Part 1 conclusion: protein structure prediction is solved! (Kinda…)<br><br>"
+      - title: "Part 1 conclusion: protein structure prediction is solved! (Kind of…)<br><br>"
         url: /coronavirus/conclusion_part_1
   - title: "Part 2: Comparing SARS-CoV-2 and SARS"
     children:
