--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -141,7 +141,7 @@ coronavirus:
         url: /coronavirus/conclusion_part_1
   - title: "Part 2: Comparing SARS-CoV-2 and SARS"
     children:
-      - title: "Searching for local differences in the SARS-CoV and SARS-CoV-2 spike proteins<br><br>"
+      - title: "Local differences in protein structures<br><br>"
         url: /coronavirus/multiseq
       - title: "Analyzing structural differences in the bonding of SARS-CoV and SARS-CoV-2 with the ACE2 enzyme<br><br>"
         url: /coronavirus/structural_diff
