--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -125,7 +125,7 @@ chemotaxis:
         url: /chemotaxis/tutorial_tumbling_frequencies
   - title: Exercises
     children:
-      - title: "Exercises on Chemotaxis<br><br>"
+      - title: "Chemotaxis exercises<br><br>"
         url: /chemotaxis/exercises
 
 coronavirus:
@@ -177,6 +177,10 @@ coronavirus:
         url: /coronavirus/tutorial_ANM
       - title: "Integrating molecular dynamics analyses with DynOmics<br><br>"
         url: /coronavirus/tutorial_DynOmics
+  - title: "Exercises"
+    children:
+      - title: "Coronavirus part 1 exercises"
+        url: /coronavirus/exercises_part_1
 
 white_blood_cells:
   - title: "Training a Computer to Classify White Blood Cells"
