--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -157,7 +157,7 @@ coronavirus:
         url: /coronavirus/gnm
       - title: "Anisotropic network models<br><br>"
         url: /coronavirus/anm
-      - title: "Part 2 conclusion: from static protein analysis to molecular dynamics<br><br>"
+      - title: "Part 2 conclusion: bamboo shoots after the rain<br><br>"
         url: /coronavirus/conclusion_part_2
   - title: Software Tutorials (featuring ProDy)
     children:
