--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -183,6 +183,8 @@ coronavirus:
     children:
       - title: "Coronavirus part 1 exercises"
         url: /coronavirus/exercises_part_1
+      - title: "Coronavirus part 2 exercises"
+        url: /coronavirus/exercises_part_2
 
 white_blood_cells:
   - title: "Training a Computer to Classify White Blood Cells"
