--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -101,6 +101,8 @@ chemotaxis:
         url: /chemotaxis/biochemistry
       - title: "Methylation helps a bacterium adapt to differing concentrations<br><br>"
         url: /chemotaxis/adaptation
+      - title: "Modeling a Bacterium’s Response to an Attractant Gradient"
+        url: /chemotaxis/gradient
       - title: "Conclusion: the beauty of E. coli's robust randomized exploration algorithm<br><br>"
         url: /chemotaxis/conclusion
   - title: Software Tutorials (featuring BioNetGen)
